--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -15,6 +15,22 @@
   font-weight: 600;
 
 }
+.discountBadge
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  /*top: 10px;*/
+  /*right: 10px;*/
+  width: 65px;
+  height: 65px;
+  background-color:red ;
+  z-index:1;
+  color: white;
+  border-radius: 50%;
+}
+
 .item-price-old{
   color: #8c8c8c;
   font-size: 18px;
@@ -25,3 +41,32 @@
   transform: scale(1.05);
   transition: 0.6s;
 }
+
+.old_price {
+  font-weight: 500;
+  text-decoration: line-through;
+  color: rgb(197, 197, 197);
+  font-size: 0.9em;
+  margin-right: 5px;
+}
+.new_price {
+  color: black;
+  font-size: large;
+  font-weight: bold;
+}
+
+/*div>p .old_price::before*/
+/*{*/
+/*  content: "sold";*/
+/*  position: absolute;*/
+/*  left: 120px;*/
+/*  bottom: 250px;*/
+/*  padding: 5px;*/
+/*  background-color: red;*/
+/*  color: #ccc;*/
+/*  border-radius: 10px;*/
+/*  font-weight: 100;*/
+/*  text-decoration:none;*/
+/*}*/
+
+
